# src/main/java/com/example/ims/dto/ItemDTO.java
@@ -1,0 +1,26 @@
+package com.example.ims.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+import lombok.Builder;
+import lombok.Data;
+
+
+@Data
+@Builder
+public class ItemDTO {
+
+    private Long id;
+
+    @NotBlank(message = "Name is required")
+    private String name;
+
+    @NotBlank(message = "Description is required")
+    private String description;
+
+    @NotNull(message = "Price is required")
+    private Double price;
+
+    private Integer quantity;
+
+}
